#=========================#
# ChangeLog for libdvbpsi #
#=========================#

0.1.2
**

  * configure.ac, bootstrap: removed redundant stuff from CVS such as the
    Makefile.in files, configure and config.*, and added a bootstrap script
    to generate them; renamed configure.in to configure.ac and moved config.h
    to . because it's now the recommended practice.
  * src/dvbpsi.h: removed automatic inclusion of inttypes.h because it was
    too platform-dependent and led to lots of cross-compilation problems. Now
    the program using libdvbpsi has to make sure it is C99 compliant.
  * configure.in, ltmain.sh: fixes for Solaris, mingw and Mac OS X.
  * src/tables/pmt.c: fixed the PMT generator which used to add one PSI
    section for one ES.
  * */Makefile.am: reworked automake directories to avoid linking problems
    on Mac OS X.

0.1.1
Sat, 18 May 2002 13:30:44 +0200

  * src/descriptor.h, src/descriptor.c: added a p_decoded field to the
    dvbpsi_descriptor_s structure.
  * src/descriptor.h, src/descriptor.c, src/tables/pmt.c: added an 's' to the
    dvbpsi_DeleteDescriptors function.
  * src/descriptors/dr_02.h, src/descriptors/dr_02.c: MPEG2 "video stream"
    descriptor decoder and generator.
  * src/descriptors/dr_03.h, src/descriptors/dr_03.c: MPEG2 "audio stream"
    descriptor decoder and generator.
  * src/descriptors/dr_04.h, src/descriptors/dr_04.c: MPEG2 "hierarchy"
    descriptor decoder and generator.
  * src/descriptors/dr_05.h, src/descriptors/dr_05.c: MPEG2 "registration"
    descriptor decoder and generator.
  * src/descriptors/dr_06.h, src/descriptors/dr_06.c: MPEG2 "data stream
    alignment" descriptor decoder and generator.
  * src/descriptors/dr_07.h, src/descriptors/dr_07.c: MPEG2 "target background
    grid" descriptor decoder and generator.
  * src/descriptors/dr_08.h, src/descriptors/dr_08.c: MPEG2 "video window"
    descriptor decoder and generator.
  * src/descriptors/dr_09.h, src/descriptors/dr_09.c: MPEG2 "conditional